# general_computing

gc/gc-backend/: .gitignore
gc/gc-backend/src/: BUILD.bazel  db.go  generate.sh  server.go  task_compiler.go  validation.go
gc/gc-backend/src/helper/: BUILD.bazel  README.md  cmd.go
gc/gc-backend/src/helper/data_file_parser/: BUILD.bazel  csv.go  main.go  oracle.go  xlsx.go
gc/gc-backend/src/helper/data_file_parser/oracletest/: BUILD.bazel  main.go
gc/gc-backend/src/helper/data_file_parser/test/: BUILD.bazel  main.go
gc/gc-backend/src/helper/pipeline_converter/: BUILD.bazel  main.go
gc/gc-backend/src/helper/result_table_creater/: BUILD.bazel  result_table_creater.go
gc/gc-backend/src/helper/risk_management_importer/: BUILD.bazel  risk_management_importer.go
gc/gc-backend/src/helper/sds_table_creater/: BUILD.bazel  parse_sds.py  parse_sds_ew.py  sds_mapping.json  sds_table_creater.go
gc/gc-backend/src/helper/table_meta_creater/: BUILD.bazel  std.xlsx  table_meta_creater.go
gc/gc-backend/src/main/client/: main.go
gc/gc-backend/src/main/grpc_server/: BUILD.bazel  main.go
gc/gc-backend/src/test/: BUILD.bazel  table_creater.py  test.go  zzs_field.py
gc/gc-backend/src/uma/: BUILD.bazel  uma.pb.go
gc/gc-frontend/: .eslintrc.json  .gitignore  package.json  webpack.config.js
gc/gc-frontend/web/: .eslintrc.json  actions.js  collection-editor.css  collection-editor.jsx  collection-holder.css  collection-holder.jsx  collection.css  collection.jsx  data-import.css  database-table-list.jsx  expression-holder.css  expression-holder.jsx  expression.css  expression.jsx  field-holder.css  field-holder.jsx  field-list.css  field-list.jsx  field.css  field.jsx  index.html  index.jsx  pipeline-edit.css  pipeline-edit.jsx  pipeline-list.jsx  reducer.js  sample-data.js  store.js  table-metadata-list.jsx  task-edit.jsx  types.js  upload.jsx  webapi.js
gc/proto/: BUILD.bazel  formula.pb.go  formula.proto  general_computing.proto  server.pb.go  server.proto
