load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "proto_proto",
    srcs = [
        "data_manager.proto",
        "formula.proto",
        "general_computing.proto",
        "server.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@go_googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "git.corp.angel-salon.com/gc/proto",
    proto = ":proto_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@go_googleapis//google/api:annotations_go_proto",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":proto_go_proto"],
    importpath = "git.corp.angel-salon.com/gc/proto",
    visibility = ["//visibility:public"],
)
