load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "db.go",
        "server.go",
        "server_data.go",
        "task_compiler.go",
        "validation.go",
    ],
    importpath = "git.corp.angel-salon.com/gc/gc-backend/src",
    visibility = ["//visibility:public"],
    deps = [
        "//gc/gc-backend/src/helper/data_file_parser:go_default_library",
        "//gc/proto:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_lib_pq//:go_default_library",
        "@in_gopkg_mgo_v2//:go_default_library",
        "@in_gopkg_mgo_v2//bson:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
