load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["cmd.go"],
    importpath = "git.corp.angel-salon.com/gc/gc-backend/src/helper",
    visibility = ["//visibility:private"],
    deps = [
        "//gc/proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "helper",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
