load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "git.corp.angel-salon.com/gc/gc-backend/src/helper/pipeline_converter",
    visibility = ["//visibility:private"],
    deps = [
        "@com_gitlab_jsq_general_computing//src/proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "pipeline_converter",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
