load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "git.corp.angel-salon.com/gc/gc-backend/src/main/grpc_server",
    visibility = ["//visibility:private"],
    deps = [
        "//gc/gc-backend/src:go_default_library",
        "//gc/proto:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "grpc_server",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
