load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "git.corp.angel-salon.com/gc/gc-backend/src/helper/data_file_parser/test",
    visibility = ["//visibility:private"],
    deps = [
        "//gc/proto:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_alecthomas_kingpin_v2//:go_default_library",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)

go_binary(
    name = "test",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
